# esp-idf-nvs-partition-gen

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build_espidfnvs.yml  issue_comment.yml  new_issues.yml  new_prs.yml  pr_approved.yml  release_pypi.yml
ci/: gh_changelog_template.md.j2
esp_idf_nvs_partition_gen/: __main__.py  nvs_partition_gen.py
